[package]
name = "falling-sand"
description = "Native implementation of Falling Sand"
repository = "https://github.com/quittle/fallingsand_dustintoff_com"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.2"